--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		body,html,#app{height: 100%;padding: 0;margin: 0}
   	</style>
     <div id="app">
+    aaaa 
     </div>
     <!-- built files will be auto injected -->
   </body>
